force-app/main/default/objects/Activity/fields/Admin_Duties__c.field-meta.xml
<CustomField>
    <fullName>Admin_Duties__c</fullName>
    <inlineHelpText>Type of ombudsman administrative duty being recorded.</inlineHelpText>
    <label>Admin Duties</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meeting Attended</fullName>
            </value>
            <value>
                <fullName>Presentations/Briefs</fullName>
            </value>
            <value>
                <fullName>Trainings Attended</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Social Media Maintenance</fullName>
            </value>
            <value>
                <fullName>Other Duties</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>