force-app/main/default/objects/Activity/fields/Childcare_Incoming__c.field-meta.xml
<CustomField>
    <fullName>Childcare_Incoming__c</fullName>
    <label>Childcare Incoming</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>