force-app/main/default/objects/Activity/fields/Childcare_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Childcare_Outgoing__c</fullName>
    <label>Childcare Outgoing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>