force-app/main/default/objects/Activity/fields/Deployment_FRG_Incoming__c.field-meta.xml
<CustomField>
    <fullName>Deployment_FRG_Incoming__c</fullName>
    <label>Deployment/FRG Incoming</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>