force-app/main/default/objects/Activity/fields/Deployment_FRG_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Deployment_FRG_Outgoing__c</fullName>
    <label>Deployment/FRG Outgoing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>