force-app/main/default/objects/Activity/fields/Education_Incoming__c.field-meta.xml
<CustomField>
    <fullName>Education_Incoming__c</fullName>
    <label>Education Incoming</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>