force-app/main/default/objects/Activity/fields/Education_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Education_Outgoing__c</fullName>
    <label>Education Outgoing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>