force-app/main/default/objects/Activity/fields/EFMP_Incoming__c.field-meta.xml
<CustomField>
    <fullName>EFMP_Incoming__c</fullName>
    <label>EFMP Incoming</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>