force-app/main/default/objects/Activity/fields/EFMP_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>EFMP_Outgoing__c</fullName>
    <label>EFMP Outgoing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>