force-app/main/default/objects/Activity/fields/Emergency_Crisis_Incoming__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Crisis_Incoming__c</fullName>
    <label>Emergency/Crisis Incoming</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>