force-app/main/default/objects/Activity/fields/Employment_Incoming__c.field-meta.xml
<CustomField>
    <fullName>Employment_Incoming__c</fullName>
    <label>Employment Incoming</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>