force-app/main/default/objects/Activity/fields/Employment_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Employment_Outgoing__c</fullName>
    <label>Employment Outgoing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>