force-app/main/default/objects/Activity/fields/Financial_Pay_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Financial_Pay_Outgoing__c</fullName>
    <label>Financial/Pay Outgoing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>