force-app/main/default/objects/Activity/fields/Individual_Augmentee_Incoming__c.field-meta.xml
<CustomField>
    <fullName>Individual_Augmentee_Incoming__c</fullName>
    <label>Individual Augmentee Incoming</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>