force-app/main/default/objects/Activity/fields/Legal_Incoming__c.field-meta.xml
<CustomField>
    <fullName>Legal_Incoming__c</fullName>
    <label>Legal Incoming</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>