force-app/main/default/objects/Activity/fields/Legal_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Legal_Outgoing__c</fullName>
    <label>Legal Outgoing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>