force-app/main/default/objects/Activity/fields/Medical_Incoming__c.field-meta.xml
<CustomField>
    <fullName>Medical_Incoming__c</fullName>
    <label>Medical Incoming</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>