force-app/main/default/objects/Activity/fields/Medical_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Medical_Outgoing__c</fullName>
    <label>Medical Outgoing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>