force-app/main/default/objects/Activity/fields/Military_Records_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Military_Records_Outgoing__c</fullName>
    <label>Military Records Outgoing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>