force-app/main/default/objects/Activity/fields/MWR_Incoming__c.field-meta.xml
<CustomField>
    <fullName>MWR_Incoming__c</fullName>
    <label>MWR Incoming</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>