force-app/main/default/objects/Activity/fields/MWR_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>MWR_Outgoing__c</fullName>
    <label>MWR Outgoing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>