force-app/main/default/objects/Activity/fields/Newsletter_Incoming__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Incoming__c</fullName>
    <label>Newsletter Incoming</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>