force-app/main/default/objects/Activity/fields/Newsletter_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Outgoing__c</fullName>
    <label>Newsletter Outgoing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>