force-app/main/default/objects/Activity/fields/Other_Info_Referral_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Other_Info_Referral_Outgoing__c</fullName>
    <label>Other Info &amp; Referral Outgoing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>