force-app/main/default/objects/Activity/fields/Red_Cross_Message_Incoming__c.field-meta.xml
<CustomField>
    <fullName>Red_Cross_Message_Incoming__c</fullName>
    <label>Red Cross Message Incoming - Deprecated</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>