force-app/main/default/objects/Activity/fields/Relocation_Housing_Sponsor_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Housing_Sponsor_Outgoing__c</fullName>
    <label>Relocation/Housing/Sponsor Outgoing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>