force-app/main/default/objects/Activity/fields/SAPR_Incoming__c.field-meta.xml
<CustomField>
    <fullName>SAPR_Incoming__c</fullName>
    <label>SAPR Incoming</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>