force-app/main/default/objects/Activity/fields/SAPR_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>SAPR_Outgoing__c</fullName>
    <label>SAPR Outgoing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>