force-app/main/default/objects/Activity/fields/Social_Media_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Outgoing__c</fullName>
    <label>Social Media Outgoing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>