force-app/main/default/objects/Activity/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <description>Allows users to record how much time they spent completing this activity.</description>
    <inlineHelpText>How much time did you spend on this activity?</inlineHelpText>
    <label>Time Spent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>6 min</fullName>
                <default>true</default>
                <label>6 min</label>
            </value>
            <value>
                <fullName>15 min</fullName>
            </value>
            <value>
                <fullName>30 min</fullName>
            </value>
            <value>
                <fullName>45 min</fullName>
            </value>
            <value>
                <fullName>1 hour</fullName>
            </value>
            <value>
                <fullName>1 hour 15 min</fullName>
            </value>
            <value>
                <fullName>1 hour 30 min</fullName>
            </value>
            <value>
                <fullName>2 hours</fullName>
            </value>
            <value>
                <fullName>2 hours 30 min</fullName>
            </value>
            <value>
                <fullName>3 hours</fullName>
            </value>
            <value>
                <fullName>4 hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>